trunk/Archive2/54/7127e570956f9a/output
main.cpp:12:36: error: macro "ASSERT_NOTHROW_WHATEVER" passed 2 arguments, but takes just 1
 ASSERT_NOTHROW_WHATEVER(B<int, int>)
                                    ^
main.cpp:12:1: error: 'ASSERT_NOTHROW_WHATEVER' does not name a type
 ASSERT_NOTHROW_WHATEVER(B<int, int>)
 ^
